2010-02-03  Ulrich Drepper  <drepper@redhat.com>

	[BZ #11242]
	* misc/getusershell.c (initshells): Allocate one more byte in input
	buffer so that fgets doesn't loop undefinitely.

2010-02-02  Ulrich Drepper  <drepper@redhat.com>

	* stdlib/setenv.c (__add_to_environ): Don't use alloca if
	__libc_use_alloca tells us not to.  Fix memory leak in an error
	situation.  Based partially on patch by Jim Meyering.

2010-01-26  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* sysdeps/mach/getsysstats.c (get_nprocs_conf, get_nprocs,
	get_phys_pages, get_avphys_pages): Add weak aliases.

2010-01-25  Andreas Schwab  <schwab@redhat.com>

	* iconv/iconv_prog.c (write_output): Fix check for open failure.

2010-01-22  Ulrich Drepper  <drepper@redhat.com>

	[BZ #11200]
	* locale/loadlocale.c (_nl_load_locale): Fix recognition of genuine
	mmap resource problem.  Patch by Joe Landers <jlanders@vmware.com>.

2010-01-22  Jim Meyering  <jim@meyering.net>

	[BZ #11193]
	* posix/regexec.c (extend_buffers): Avoid overflow in realloc
	buffer length computation.

	[BZ #11192]
	* posix/regexec.c (re_copy_regs): Don't leak when allocation
	of the start buffer succeeds but allocation of the "end" one fails.

	[BZ #11191]
	* posix/regexec.c (re_search_2_stub): Check for overflow
	when adding the sizes of the two strings.

	[BZ #11190]
	* posix/regexec.c (re_search_internal): Avoid overflow
	in computing re_malloc buffer size.

	[BZ #11189]
	* posix/regexec.c (prune_impossible_nodes): Avoid overflow
	in computing re_malloc buffer size.

	[BZ #11188]
	* posix/regexec.c (build_trtable): Avoid arithmetic overflow
	in size calculation.

	[BZ #11187]
	* posix/regexec.c (re_search_2_stub): Use simpler method than
	boolean for freeing internal storage.

2010-01-22  Ulrich Drepper  <drepper@redhat.com>

	* posix/regex_internal.c (re_string_skip_chars): Simplify test for
	failed mbrtowc call.

2010-01-22  Jim Meyering  <jim@meyering.net>

	[BZ #11186]